--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,19 @@
 [versions]
 ael = "1.0.1-hf"
-agp = "8.10.1"
+agp = "8.13.0"
 androidxAppcompat = "1.7.1"
-androidxBaselineprofile = "1.3.4"
-androidxCore = "1.16.0"
+androidxCore = "1.17.0"
 androidxGridLayout = "1.1.0"
 androidxPref = "1.2.1"
-androidxTestBenchmarkmacrojunit4 = "1.3.4"
-androidxTestEspresso = "3.6.1"
-androidxTestJunit = "1.2.1"
-androidxTestRunner = "1.6.2"
+androidxTestBenchmark = "1.4.1"
+androidxTestEspresso = "3.7.0"
+androidxTestJunit = "1.3.0"
+androidxTestRunner = "1.7.0"
 androidxTestUiautomator = "2.3.0"
-androidxWork = "2.10.1"
-kotlin = "2.1.21"
+androidxWork = "2.10.4"
+kotlin = "2.2.20"
 leakcanary = "2.14"
-material = "1.12.0"
+material = "1.13.0"
 
 [libraries]
 ael-kt = { group = "com.github.mdp43140.ael", name = "ael_kt", version.ref = "ael" }
@@ -22,7 +21,7 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 androidx-gridlayout = { group = "androidx.gridlayout", name = "gridlayout", version.ref = "androidxGridLayout" }
 androidx-kt = { group = "androidx.core", name = "core-ktx", version.ref = "androidxCore" }
 androidx-pref-kt = { group = "androidx.preference", name = "preference", version.ref = "androidxPref" }
-androidx-benchmark-macroJunit4 = { group = "androidx.benchmark", name = "benchmark-macro-junit4", version.ref = "androidxTestBenchmarkmacrojunit4" }
+androidx-benchmark-macroJunit4 = { group = "androidx.benchmark", name = "benchmark-macro-junit4", version.ref = "androidxTestBenchmark" }
 androidx-test-espresso = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidxTestEspresso" }
 androidx-test-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidxTestJunit" }
 androidx-test-runner = { group = "androidx.test", name = "runner", version.ref = "androidxTestRunner" }
@@ -34,5 +33,5 @@ material = { group = "com.google.android.material", name = "material", version.r
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 android-test = { id = "com.android.test", version.ref = "agp" }
-androidx-baselineprofile = { id = "androidx.baselineprofile", version.ref = "androidxBaselineprofile" }
+androidx-baselineprofile = { id = "androidx.baselineprofile", version.ref = "androidxTestBenchmark" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin"  }
