--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:name=".App"
+		android:requestLegacyExternalStorage="true"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
 		<activity
